@@ -1,3 +1,6 @@
+Changelog v5.1.71 (2024-02-23):
+- Added EasyDebrid
+
 Changelog v5.1.70 (2024-02-20):
 - Added New Setting "Skip UnCached Sources (Real-Debrid, AllDebrid)"
 - Added more meta to last Watched
